2022-05-18T08:09:46Z:
* notice: last 14d: all unq: 23 3
* notice: prev accum: outdated-all outdated-unq / all unq: 47 13 / 71 19
* notice: next accum: outdated-all outdated-unq / all unq: 48 14 / 71 19
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: changed dates: []

2022-05-17T00:36:36Z:
* notice: last 14d: all unq: 24 4
* notice: prev accum: outdated-all outdated-unq / all unq: 46 12 / 70 18
* notice: next accum: outdated-all outdated-unq / all unq: 47 13 / 71 19
* notice: prev exec diff / last date diff: unq all: +1 +1 -0 -0 / +1 +1 -0 -0
* notice: changed dates: [2022-05-16]

2022-05-16T00:37:06Z:
* notice: last 14d: all unq: 24 4
* notice: prev accum: outdated-all outdated-unq / all unq: 45 11 / 70 18
* notice: next accum: outdated-all outdated-unq / all unq: 46 12 / 70 18
* notice: prev json diff / prev day diff: unq all: +0 +0 -0 -0 / +0 +0 -0 -0
* notice: changed dates: []

2022-05-13T08:08:09Z:
* notice: last 14d: all unq: 25 5
* notice: prev accum: outdated-all outdated-unq / all unq: 43 9 / 70 18
* notice: next accum: outdated-all outdated-unq / all unq: 45 11 / 70 18
* notice: prev json diff / prev day diff: unq all: +0 +0 -0 -0 / +0 +0 -0 -0

2022-05-12T08:08:32Z:
* notice: last 14d: all unq: 27 7
* notice: prev accum: outdated-all outdated-unq / all unq: 43 9 / 57 17
* notice: next accum: outdated-all outdated-unq / all unq: 43 9 / 70 18
* notice: prev json diff / prev day diff: unq all: +1 +13 -0 -0 / +2 +15 -0 -0

2022-05-12T00:36:55Z:
* notice: last 14d: all unq: 14 7
* notice: prev accum: outdated-all outdated-unq / all unq: 43 9 / 55 16
* notice: next accum: outdated-all outdated-unq / all unq: 43 9 / 57 17
* notice: prev json diff / prev day diff: unq all: +1 +2 -0 -0 / +1 +2 -0 -0

2022-05-09T16:09:51Z:
* notice: last 14d: all unq: 12 6
* notice: prev accum: outdated-all outdated-unq / all unq: 42 8 / 55 16
* notice: next accum: outdated-all outdated-unq / all unq: 43 9 / 55 16