@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-18T08:09:46Z",
-  "count_outdated" : 48,
-  "uniques_outdated" : 14,
-  "count" : 71,
-  "uniques" : 19,
+  "timestamp" : "2022-05-20T16:10:19Z",
+  "count_outdated" : 49,
+  "uniques_outdated" : 15,
+  "count" : 74,
+  "uniques" : 20,
   "views" : [
-    {
-      "timestamp": "2022-05-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-08T00:00:00Z",
       "count": 6,
@@ -37,6 +30,13 @@
       "timestamp": "2022-05-16T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-20T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
