@@ -1,12 +1,7 @@
 {
-  "count": 23,
-  "uniques": 3,
+  "count": 25,
+  "uniques": 4,
   "views": [
-    {
-      "timestamp": "2022-05-06T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-08T00:00:00Z",
       "count": 6,
@@ -25,6 +20,11 @@
     {
       "timestamp": "2022-05-16T00:00:00Z",
       "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-20T00:00:00Z",
+      "count": 3,
       "uniques": 1
     }
   ]
