@@ -1,3 +1,10 @@
+2022-05-20T16:10:19Z:
+* notice: last 14d: unq all: 4 25
+* notice: prev accum: outdated-unq outdated-all / unq all: 14 48 / 19 71
+* notice: next accum: outdated-unq outdated-all / unq all: 15 49 / 20 74
+* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +1 +3 -0 -0 / 1 3
+* notice: changed dates: [2022-05-20]
+
 2022-05-18T08:09:46Z:
 * notice: last 14d: all unq: 23 3
 * notice: prev accum: outdated-all outdated-unq / all unq: 47 13 / 71 19
